# Flappy-bird-CPU

./: CMakeLists.txt  README.md
Core/: Core.hpp  Game.cpp  Utils.cpp
Engine/: Engine.cpp
FlappyBird/: CMakeLists.txt
FlappyBird/Core/: Core.hpp  Font.cpp  Game.cpp  Utils.cpp
FlappyBird/Math/: Math.hpp
Math/: Math.cpp
